feat: Atualizando rota /me
