# docs/swagger.json
@@ -151,10 +151,10 @@
         }
       }
     },
-    "/students/me": {
+    "/me": {
       "get": {
         "tags": ["Auth"],
-        "summary": "Consultar dados do aluno autenticado",
+        "summary": "Consultar dados de cadastro",
         "security": [{ "bearerAuth": [] }],
         "responses": {
           "200": {
